<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlantDetailsActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_back_button" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_search" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cart" />

    <TextView
        android:id="@+id/plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/proximanovasemibold"
        android:textColor="#27394A"
        android:textSize="32sp"
        android:transitionName="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:text="Bamboo" />

    <ImageView
        android:id="@+id/plant_image2"
        android:layout_width="154dp"
        android:layout_height="194dp"
        android:layout_marginEnd="16dp"
        android:transitionName="image"
        app:layout_constraintBottom_toBottomOf="@+id/plant_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plant_name"
        app:srcCompat="@drawable/plant3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/category"
        android:textColor="#27394A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/plant_name"
        app:layout_constraintTop_toBottomOf="@+id/plant_name" />

    <TextView
        android:id="@+id/plant_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/enter_category"
        android:textColor="#27394A"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/plant_siz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/size"
        android:textColor="#27394A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/plant_category"
        app:layout_constraintTop_toBottomOf="@+id/plant_category" />

    <TextView
        android:id="@+id/plant_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/small"
        android:textColor="#27394A"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/plant_siz"
        app:layout_constraintTop_toBottomOf="@+id/plant_siz" />

    <TextView
        android:id="@+id/plant_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/proximanovasemibold"
        android:lineSpacingExtra="2dp"
        android:text="@string/this_small_green_and_red_succulent_grows_in_the_shape_of_a_star_giving_it_its_christmas_name_yellow_bumps_run_across_the_leaves_and_border_the_edges_it_turns_more_red_when_happily_stressed_christmas_carol_has_red_pink_flowers_that_typically_bloom_in_the_fall"
        android:textColor="#27394A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_size" />

    <TextView
        android:id="@+id/plant_price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proximanovasemibold"
        android:textColor="#27394a"
        android:textSize="24sp"
        android:transitionName="price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_description"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/plant_price2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plant_price2"
        app:srcCompat="@drawable/ic_add_to_bag" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:gravity="center"
        android:text="@string/free_delivery"
        android:textColor="#4DAA94"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/plant_price2"
        app:layout_constraintStart_toEndOf="@+id/plant_price2"
        app:layout_constraintTop_toTopOf="@+id/plant_price2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg1"
        android:fontFamily="@font/proximanovasemibold"
        android:gravity="center"
        android:text="@string/details"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_price2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/button_bg2"
        android:fontFamily="@font/proximanovasemibold"
        android:gravity="center"
        android:text="@string/care"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_bg2"
        android:fontFamily="@font/proximanovasemibold"
        android:gravity="center"
        android:text="@string/delivery"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#4DDA94"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#4DDA94"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/type" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/layer" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/type"
        android:textColor="#27394a"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/plant_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/description"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/placement" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:srcCompat="@drawable/pot" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/placement"
        android:textColor="#27394a"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/plant_placement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/description"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/pot"
        android:textColor="#27394a"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/imageView19"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/plant_pot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/description"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:layout_constraintVertical_bias="0.49" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/height" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/dim" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/layer"
        android:textColor="#27394a"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/plant_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/description"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/height"
        android:textColor="#27394a"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/dimensions"
        android:textColor="#27394a"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/plant_dim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/description"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/plant_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/description"
        android:textColor="#27394a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />
</androidx.constraintlayout.widget.ConstraintLayout>